# libuv

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mailmap  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Dockerfile  Findlibuv.cmake  LICENSE  LINKS.md  MAINTAINERS.md  Makefile  Makefile.am  Makefile.mingw  README  README.md  SECURITY.md  SUPPORTED_PLATFORMS.md  TODO  XMAKE_INSTRUCTIONS.md  all.gyp  android-configure  appveyor.ps1  appveyor.yml  autogen.sh  azure-pipelines.yml  biicode.conf  build.gradle  build.mk  checksparse.sh  cmake_uninstall.cmake.in  common.gypi  compose.yml  (+57 more)
.ci/: esy-build-steps.yml
.clusterfuzzlite/: Dockerfile  README.md  build.sh  libuv_fuzzer.c  project.yaml
.github/: BUG_REPORT.md  ISSUE_TEMPLATE.md  dependabot.yml  stale.yml
.github/workflows/: CI-docs.yml  CI-release_package.yml  CI-reuse.yml  CI-sample.yml  CI-samples.yml  CI-unix.yml  CI-win.yml  CI.yml  cflite_pr.yml  lint.yml  release-windows.yml  sanitizer.yml  santilizer.yml
c-ares/: CHANGES  GIT-INFO  Makefile.am  Makefile.inc  Makefile.m32  Makefile.msvc  Makefile.netware  RELEASE-NOTES  acountry.c  adig.c  ahost.c  ares.h  ares_gethostbyname.c  ares_getnameinfo.c  ares_init.c  ares_iphlpapi.h  ares_parse_ns_reply.c  ares_set_local_dev.3  ares_set_local_ip4.3  ares_set_local_ip6.3  ares_set_servers_csv.3  ares_setup.h  buildconf.bat  config-dos.h  config-win32.h  configure.ac
c-ares/m4/: cares-compilers.m4  cares-functions.m4  cares-override.m4
c-ares/vc/: vc6aws.dsw
cmake/: EnsureOutOfSourceBuild.cmake  FindAdvapi32.cmake  FindDL.cmake  FindIphlpapi.cmake  FindKstat.cmake  FindKvm.cmake  FindMath.cmake  FindNsl.cmake  FindPerfstat.cmake  FindPsapi.cmake  FindRT.cmake  FindSendfile.cmake  FindShell32.cmake  FindSocket.cmake  FindUser32.cmake  FindUserenv.cmake  FindUtil.cmake  FindWs2_32.cmake
cmake-toolchains/: cross-mingw32-linux.cmake
code/: Makefile
docs/: Makefile  requirements.txt
docs/code/: .gitignore  CMakeLists.txt  Makefile
docs/code/cgi/: main.c  tick.c
docs/code/default-loop/: main.c
docs/code/detach/: main.c
docs/code/dns/: main.c
docs/code/helloworld/: main.c
docs/code/idle-basic/: main.c
docs/code/idle-compute/: main.c
docs/code/interfaces/: main.c
docs/code/locks/: main.c
docs/code/multi-echo-server/: hammer.js  main.c  worker.c
docs/code/onchange/: main.c
docs/code/openssl-echo-server/: main.c
docs/code/openssl-http-server/: http_parser.c  http_parser.h  main.c
docs/code/pipe-echo-server/: main.c
docs/code/plugin/: hello.c  main.c  plugin.h
docs/code/proc-streams/: main.c  test.c
docs/code/progress/: main.c
docs/code/queue-cancel/: main.c
docs/code/queue-work/: main.c
docs/code/queue-work2/: main.c
docs/code/ref-timer/: main.c
docs/code/signal/: main.c
docs/code/spawn/: main.c
docs/code/tcp-echo-server/: main.c
docs/code/thread-create/: main.c
docs/code/tty/: main.c
docs/code/tty-gravity/: main.c
docs/code/udp-dhcp/: main.c
docs/code/uvcat/: main.c
docs/code/uvstop/: main.c
docs/code/uvtee/: main.c
docs/code/uvwget/: defs.h  main.c
docs/src/: after.rst  api.rst  before.rst  conf.py  design.rst  device.rst  dns.rst  errors.rst  fs.rst  fs_event.rst  fs_poll.rst  guide.rst  handle.rst  index.rst  loop.rst  migration_100_200.rst  misc.rst  pipe.rst  poll.rst  process.rst  request.rst  signal.rst  spin.rst  stream.rst  tcp.rst  threading.rst  threadpool.rst  threadpool_stats.rst  timer.rst  tracing.rst  tty.rst  udp.rst  udp2.rst  upgrading.rst
esy/: build-windows.sh  build.sh
esy.lock/: .gitattributes  index.json
fuzz/: fuzz_idna.c  fuzz_inet.c
gradle/wrapper/: gradle-wrapper.properties
include/: ares.h  ev.h  pthread-barrier.h  pthread-fixes.h  stdint-msvc2008.h  tree.h  uv-darwin.h  uv-errno.h  uv-os390.h  uv-queue.h  uv-threadpool.h  uv-unix.h  uv-version.h  uv-win.h  uv-winuap-hack.h  uv.h
include/uv/: aix.h  bsd.h  darwin.h  errno.h  hash.h  linux.h  os390.h  posix.h  pthread-barrier.h  queue.h  sunos.h  threadpool.h  tree.h  unix.h  uv_ssize_t.h  version.h  win.h
include/uv-private/: ev-proto.h  ev.h  ngx-queue.h  tree.h  uv-unix.h  uv-win.h
ios/include/: uv.h
ios/libuv/: Info.plist  libuv.h
ios/libuv.xcodeproj/: project.pbxproj
m4/: dtrace.m4  libuv-check-flags.m4  libuv-check-versions.m4
msvs/: c-ares.vcxproj  liboio-benchmark.vcxproj  liboio-test.vcxproj  liboio.sln  liboio.vcxproj  libuv-benchmark.vcxproj  libuv-test.vcxproj  libuv.vcxproj
samples/socks5-proxy/: Makefile  client.c  defs.h  main.c  server.c
scripts/: Add-VisualStudioPackages.ps1  Update-ProjectFilesToVS2017.ps1
src/: cares.c  executor.c  fs-poll.c  heap-inl.h  idna.c  idna.h  inet.c  loop-watcher.c  queue.h  random.c  strscpy.c  strscpy.h  strtok.h  thread-common.c  threadpool.c  timer.c  uv-common.c  uv-common.h  uv-data-getter-setters.c  uv-eio.c  uv-freebsd.c  uv-linux.c  uv-path.c  uv-unix.c  uv-win.c  version.c
src/ares/: ares_init.c  ares_nowarn.c
src/eio/: eio.c
src/stubs/: dl.c  fs-event.c  fs.c  pipe.c  poll.c  process.c  (+2 more)
test/: CMakeLists.txt  benchmark-ares.c  benchmark-async-pummel.c  benchmark-async.c  benchmark-dummy.c  benchmark-fs-read.c  benchmark-fs-stat.c  benchmark-getaddrinfo.c  benchmark-list.h  benchmark-loop-count.c  benchmark-million-async.c  benchmark-million-timers.c  benchmark-multi-accept.c  benchmark-ping-pongs.c  benchmark-ping-udp.c  benchmark-poll-2k-ping-pongs.c  benchmark-pound.c  benchmark-pump.c  benchmark-queue-work.c  benchmark-sizes.c  benchmark-spawn.c  benchmark-tcp-write-batch.c  benchmark-thread.c  benchmark-udp-packet-storm.c  benchmark-udp-pummel.c  blackhole-server.c  check-file-offset-bits.c  dns-server.c  echo-demo.c  echo-server.c  echo.c  echo.h  run-benchmarks.c  run-tests.c  run-tests程序从这里开始运行.c  runner-unix.c  runner-unix.h  runner-win.c  runner-win.h  runner-win32.c  (+264 more)
tools/: make_dist_html.py  vswhere_usability_wrapper.cmd
win32/: libuv.sln  libuv.vcxproj  libuv.vcxproj.filters
winuap/: libuv.sln  libuv.vcxproj  libuv.vcxproj.filters
(+150 files in other folders)
